project/5-vpc1-igw1.tf
resource "aws_internet_gateway" "igw1" {
  vpc_id = aws_vpc.vpc1.id
// alias = singapore
  tags = {
    Name = "igw1"
  }
}
